--- a/index.html
+++ b/index.html
@@ -117,39 +117,93 @@
             <div class="gallery-column1">
               <div class="item exercise1" style="width: 25%">
                 <div class="item-layer">
-                  <span>lorem</span>
+                  <span>Lunges</span>
                 </div>
               </div>
               <div class="item exercise2" style="width: 50%">
                 <div class="item-layer">
-                  <span>lorem</span>
+                  <span>Push-Ups: Upper body <br> strength builder, versatile.</span>
                 </div>
               </div>
               <div class="item exercise3" style="width: 25%">
                 <div class="item-layer">
-                  <span>lorem</span>
+                  <span>Mountain Climbers</span>
                 </div>
               </div>
             </div>
             <div class="gallery-column2">
               <div class="item exercise4" style="width: 50%">
                 <div class="item-layer">
-                  <span>lorem</span>
+                  <span>Leg Press: Works the <br> quadriceps and glutes</span>
                 </div>
               </div>
               <div class="item exercise5" style="width: 25%">
                 <div class="item-layer">
-                  <span>lorem</span>
+                  <span>Burpees:</span>
                 </div>
               </div>
               <div class="item exercise6" style="width: 25%">
                 <div class="item-layer">
-                  <span>lorem</span>
+                  <span>Plank Holds:</span>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <section class="bm-calculator">
+        <div class="bm-textbox">
+            <h3 class="bm-title">BMI Calculator</h3>
+            <p class="bm-description">We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a gym.</p>
+
+        </div>
+        <div class="chart-calculator">
+            <div class="chart">
+                <h3 class="chart-title"></h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+            <div class="calculator">
+                <h3 class="cal-title">Calculate your BMI</h3>
+                <p class="cal-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                <form action="">
+                    <input type="number" name="" id="" placeholder="Weight/cm">
+                    <input type="number" name="" id="" placeholder="Weight/kg">
+                    <input type="number" name="" id="" placeholder="Age">
+                    <select >
+
+                    </select>
+
+                </form>
+            </div>
+
+        </div>
+
       </section>
     </main>
     <footer></footer>
