--- a/index.html
+++ b/index.html
@@ -158,54 +158,109 @@
 
         </div>
         <div class="chart-calculator">
-            <div class="chart">
-                <h3 class="chart-title"></h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>BMI</th>
-                            <th>Weight Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Below 18.5</td>
-                            <td>Underweight</td>
-                        </tr>
-                        <tr>
-                            <td>18.5 - 24.9</td>
-                            <td>Healthy</td>
-                        </tr>
-                        <tr>
-                            <td>25.0 - 29.9</td>
-                            <td>Overweight</td>
-                        </tr>
-                        <tr>
-                            <td>30.0 - and Above</td>
-                            <td>Obese</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </div>
-            <div class="calculator">
+            <div class="container">
+              <div class="chart">
+                  <h3 class="chart-title">BMI Calculator Chart</h3>
+                  <table>
+                      <thead>
+                          <tr>
+                              <th>BMI</th>
+                              <th>Weight Status</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td>Below 18.5</td>
+                              <td>Underweight</td>
+                          </tr>
+                          <tr>
+                              <td>18.5 - 24.9</td>
+                              <td>Healthy</td>
+                          </tr>
+                          <tr>
+                              <td>25.0 - 29.9</td>
+                              <td>Overweight</td>
+                          </tr>
+                          <tr>
+                              <td>30.0 - and Above</td>
+                              <td>Obese</td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+              <div class="calculator">
+            
                 <h3 class="cal-title">Calculate your BMI</h3>
-                <p class="cal-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                <p class="cal-description">We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym. </p>
                 <form action="">
                     <input type="number" name="" id="" placeholder="Weight/cm">
                     <input type="number" name="" id="" placeholder="Weight/kg">
                     <input type="number" name="" id="" placeholder="Age">
                     <select >
+                      <option value="SEX">sex</option>
+
+                    </select>
+                    <select style="width: 100%;">
+                      <option value="">Select an activity factor</option>
 
                     </select>
 
                 </form>
+                <button class="btn-primary" style="margin-top: 24px; padding: 16px 40px;">Calculate</button>
             </div>
 
         </div>
+        </div>
 
       </section>
+      <section class="team">
+        <h3 class="team-title">Lorem ipsum dolor sit amet.</h3>
+        <p class="team-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit in similique quasi!</p>
+        <div class="team-member">
+          <div class="member1">
+            <div class="trainer-title">
+              <h4>Jerome Bell</h4>
+            <p>Trainer</p>
+            </div> 
+          </div>
+          <div class="member2">
+            <div class="trainer-title">
+              <h4>Cameron William</h4>
+            <p>Trainer</p>
+            </div> 
+          </div>
+          <div class="member3">
+            <div class="trainer-title">
+              <h4>Darrell Steward</h4>
+            <p>Trainer</p>
+            </div> 
+          </div>
+          <div class="member4">
+            <div class="trainer-title">
+              <h4>Dianne Russell</h4>
+            <p>Trainer</p>
+            </div> 
+          </div>
+          <div class="member5">
+            <div class="trainer-title">
+              <h4>Cody Fisher</h4>
+            <p>Trainer</p>
+            </div> 
+          </div>
+          <div class="member6">
+            <div class="trainer-title">
+              <h4>Theresa Webb</h4>
+            <p>Trainer</p>
+            </div>           
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        
+      </div>
+
+    </footer>
   </body>
 </html>
