updated  form input field style

--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
                 <h3 class="cal-title">Calculate your BMI</h3>
                 <p class="cal-description">We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym. </p>
                 <form action="">
-                    <input type="number" name="" id="" placeholder="Weight/cm">
-                    <input type="number" name="" id="" placeholder="Weight/kg">
-                    <input type="number" name="" id="" placeholder="Age">
-                    <select >
+                    <input class="form-item1" type="number" name="" id="" placeholder="Weight/cm">
+                    <input class="form-item2" type="number" name="" id="" placeholder="Weight/kg">
+                    <input class="form-item3" type="number" name="" id="" placeholder="Age">
+                    <select class="form-item4" >
                       <option value="SEX">sex</option>
 
                     </select>
-                    <select style="width: 100%;">
+                    <select class="form-item5" style="width: 100%;">
                       <option value="">Select an activity factor</option>
 
                     </select>
