--- a/index.html
+++ b/index.html
@@ -213,7 +213,44 @@
         </div>
 
       </section>
-      <section class="team">
+      <section class="priceing">
+        <div class="price-container">
+          <div class="card-item">
+            <h3 class="price">33<span>&#36;</span></h3>
+            <p class="price-title">SINGLE CLASS</p>
+            <h4 class="class-duration">CLASS DROP-IN</h4>
+            <P>Offline Training</P>
+            <p>24 Hour Online Support</p>
+            <p>Daily 2 Hour</p>
+            <button class="buynow">BUY NOW</button>
+
+          </div>
+          <div class="card-item">
+            <h3 class="price">49<span>&#36;</span></h3>
+            <p class="price-title">PER MONTH</p>
+            <h4 class="class-duration">6 Month Unlimited</h4>
+            <P>Offline Training</P>
+            <p>24 Hour Online Support</p>
+            <p>UNLIMITED TIME</p>
+            <button class="buynow">BUY NOW</button>
+
+
+          </div>
+          <div class="card-item">
+            <h3 class="price">99<span>&#36;</span></h3>
+            <p class="price-title">PER YEAR</p>
+            <h4 class="class-duration">12 Month Unlimited</h4>
+            <P>Offline Training</P>
+            <p>24 Hour Online Support</p>
+            <p>UNLIMITED TIME</p>
+            <button class="buynow">BUY NOW</button>
+
+          </div>
+
+        </div>
+
+      </section>
+      <!-- <section class="team">
         <h3 class="team-title">Meet Our Team</h3>
         <p class="team-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
         <div class="team-member">
@@ -256,39 +293,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="text-box">
-          <h3 class="brand-name">Fitness</h3>
-          <p class="footer-description">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
-        </div>
-        <div class="footer-menu">
-          <div class="column1">
-            <h3>Get Started</h3>
-            <ul>
-              <li>Service</li>
-              <li>Contact Us</li>
-              <li>Affiliate Program</li>
-              <li>About Us</li>
-            </ul>
-            
-          </div>
-          <div class="column2">
-            <h3>Get Started</h3>
-            <ul>
-              <li>Fitness</li>
-              <li>Platform</li>
-              <li>Workout Libary</li>
-              <li>App Design</li>
-            </ul>
-
-          </div>
-        </div>        
-      </div>
-      <hr style="border: 1px solid gray; width: 55.3%; margin: 80px auto 20px;">
-      <p class="copyright">All right reserved @Fitness 2024</p>
+    <footer class="footer"> -->
       
-
-    </footer>
   </body>
 </html>
