Update priceing section

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="price-container">
           <div class="card-item">
             <h3 class="price">33<span>&#36;</span></h3>
-            <p class="price-title">SINGLE CLASS</p>
+            <p id="price-title">SINGLE CLASS</p>
             <h4 class="class-duration">CLASS DROP-IN</h4>
             <P>Offline Training</P>
             <p>24 Hour Online Support</p>
@@ -227,7 +227,7 @@
           </div>
           <div class="card-item">
             <h3 class="price">49<span>&#36;</span></h3>
-            <p class="price-title">PER MONTH</p>
+            <p id="price-title">PER MONTH</p>
             <h4 class="class-duration">6 Month Unlimited</h4>
             <P>Offline Training</P>
             <p>24 Hour Online Support</p>
@@ -238,7 +238,7 @@
           </div>
           <div class="card-item">
             <h3 class="price">99<span>&#36;</span></h3>
-            <p class="price-title">PER YEAR</p>
+            <p id="price-title">PER YEAR</p>
             <h4 class="class-duration">12 Month Unlimited</h4>
             <P>Offline Training</P>
             <p>24 Hour Online Support</p>
