All Work Is Complete For Pc

--- a/index.html
+++ b/index.html
@@ -213,16 +213,33 @@
         </div>
 
       </section>
-      <section class="priceing">
+      <section class="pricing">
+         <div class="container">
+           <div class="pricing-textbox">
+            <div class="digit">
+              <p style="font-size: 150px; color: #29282D;">04</p>
+              </div>
+            <div class="plan-title">
+              <h3>CHOOSE YOUR <br> PRICING PLAN</h3>
+            </div>
+         </div>
+         <div class="read-more">
+          <button class="btn-readmore">Read More</button>
+         </div>
+          </div>
+
+
+
         <div class="price-container">
+          
           <div class="card-item">
             <h3 class="price">33<span>&#36;</span></h3>
             <p id="price-title">SINGLE CLASS</p>
             <h4 class="class-duration">CLASS DROP-IN</h4>
             <P>Offline Training</P>
-            <p>24 Hour Online Support</p>
+            <p class="bdr">24 Hour Online Support</p>
             <p>Daily 2 Hour</p>
-            <button class="buynow">BUY NOW</button>
+            <button class="buy-now">BUY NOW</button>
 
           </div>
           <div class="card-item">
@@ -230,9 +247,9 @@
             <p id="price-title">PER MONTH</p>
             <h4 class="class-duration">6 Month Unlimited</h4>
             <P>Offline Training</P>
-            <p>24 Hour Online Support</p>
+            <p class="bdr">24 Hour Online Support</p>
             <p>UNLIMITED TIME</p>
-            <button class="buynow">BUY NOW</button>
+            <button class="buy-now">BUY NOW</button>
 
 
           </div>
@@ -241,16 +258,16 @@
             <p id="price-title">PER YEAR</p>
             <h4 class="class-duration">12 Month Unlimited</h4>
             <P>Offline Training</P>
-            <p>24 Hour Online Support</p>
+            <p class="bdr">24 Hour Online Support</p>
             <p>UNLIMITED TIME</p>
-            <button class="buynow">BUY NOW</button>
+            <button class="buy-now">BUY NOW</button>
 
           </div>
 
         </div>
 
       </section>
-      <!-- <section class="team">
+      <section class="team">
         <h3 class="team-title">Meet Our Team</h3>
         <p class="team-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
         <div class="team-member">
@@ -293,7 +310,40 @@
         </div>
       </section>
     </main>
-    <footer class="footer"> -->
+    <footer class="footer">
+    <div class="footer-container">
+      <div class="text-box">
+        <h3 class="brand-name">Fitness</h3>
+        <p class="footer-description">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+      </div>
+      <div class="footer-menu">
+        <div class="column1">
+          <h3>Get Started</h3>
+          <ul>
+            <li>Service</li>
+            <li>Contact Us</li>
+            <li>Affiliate Program</li>
+            <li>About Us</li>
+          </ul>
+
+        </div>
+        <div class="column2">
+          <h3>Get Started</h3>
+          <ul>
+            <li>Fitness</li>
+            <li>Platform</li>
+            <li>Workout Libary</li>
+            <li>App Design</li>
+          </ul>
+
+        </div>
+      </div>        
+    </div>
+    <hr style="border-color: #0000009c; width: 55.3%; margin: 80px auto 20px;">
+    <p class="copyright">All right reserved @Fitness 2024</p>
+
+
+  </footer>
       
   </body>
 </html>
