571px has done Responsive Header and Practice section for Responsiveness

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="">Contact</a></li>
           </ul>
         </nav>
+        <img class="icons-menu" src="asset/images/icons-menu1.png" alt="">
       </div>
       <div class="banner">
         <div class="text-box">
@@ -38,7 +39,7 @@
           <button class="download-btn">Download App</button>
         </div>
         <div class="banner-photo">
-          <img src="asset/images/Images 2.png" alt="" />
+          <img src="asset/images/Images 2.png" alt="banner photo" />
           <div class="tutorial">
             <div class="video-tutorial" style="display: flex">
               <div class="ellipse"></div>
