update responsive design

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <ul>
             <li>Fitness</li>
             <li>Platform</li>
-            <li>Workout Libary</li>
+            <li>Workout Library</li>
             <li>App Design</li>
           </ul>
 
