added hand writing style for shape word

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="text-box">
           <h2 class="banner-title">
             Get body in <br />
-            shape & stay <br />
+            <span id="hand-writing">shape</span> & stay<br />
             healthy
           </h2>
           <p class="banner-description">
